--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,12 +4,15 @@ encoding//templates/phpmps/*.htm=GBK
 encoding//templates/phpmps/category.htm=GBK
 encoding//templates/phpmps/footer.htm=GBK
 encoding//templates/phpmps/header.htm=GBK
+encoding//templates/phpmps/here.htm=GBK
 encoding//templates/phpmps/index.htm=GBK
 encoding//templates/phpmps/login.htm=GBK
+encoding//templates/phpmps/register.htm=GBK
 encoding//templates/phpmps/view.htm=GBK
 encoding//templates/phpmps2/header.htm=GBK
 encoding//templates/phpmps2/index.htm=GBK
 encoding//templates/phpmps2/login.htm=GBK
+encoding//templates/phpmps2/register.htm=GBK
 encoding/<project>=GBK
 encoding/category.php=GBK
 separateDerivedEncodings=true
